<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/ToolBarStyle" />

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- HEADER IMAGE -->
            <ImageView
                android:id="@+id/image_cake_decorating"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cake_faq" />

            <!-- CARD CONTENTS -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_cake_decorating"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/frequently_asked_questions"
                        android:textColor="#212121"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_1"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_1"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_2"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_2"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_3"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_3"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_4"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_4"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_5"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_5"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_6"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_6"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_7"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_7"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_8"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_8"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_9"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_9"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_10"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_10"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#D7CCC8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/faq_question_11"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer_11"
                        android:textSize="16sp" />


                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
